# SuperBowlEngine

./: .env.example  .gitignore  AI_INTEGRATION_VERIFICATION.md  AI_STATISTICIAN_INTEGRATION_PLAN.md  APP_BROKEN_FLOW_FIX_SUMMARY.md  CLAUDE_PRESENTATION_CONTEXT.md  FINAL_APP_BUILD_SUMMARY.md  FINAL_PRODUCTIZATION_SUMMARY.md  PREDICTION_AUDIT.md  README.md  SCHEDULE_PIPELINE.md  SCORE_MODEL_AUDIT_SUMMARY.md  p1.py  package-lock.json  pyproject.toml  requirements.txt  vercel.json
docs/: AI_STATISTICIAN.md  ARCHITECTURE_GRIDIRONIQ.md  FINAL_SYSTEM_AUDIT.md  GridironIQ_Coding_Agent_Session.md  MIGRATION_R_TO_PYTHON.md  MODEL_TRAINING_SUMMARY.md  NFL_DATA_VALIDATION.md  TEAM_LOGOS.md  cursor_nfl_draft_decision_engine_develo.md  cursor_superbowlengine_project_refactor.md
gridiron-intel/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
gridiron-intel/src/: App.tsx  index.css
gridiron-intel/src/components/: ExamplePredictionCard.tsx  QBComparison.tsx  TeamBadge.tsx  TeamLogo.tsx
gridiron-intel/src/data/: mockData.ts
gridiron-intel/src/hooks/: useTeamLogos.ts
gridiron-intel/src/lib/: api.ts  engine.ts  mockDraftComposite.ts
gridiron-intel/src/pages/: Backtesting.tsx  DraftRoom.tsx  DraftSimulator.tsx  DraftSimulatorPage.tsx  GameReport.tsx  Index.tsx  MatchupAnalysis.tsx  ReportLibrary.tsx  ScheduleExplorer.tsx
gridiron-intel/src/styles/: draftPlatform.css
outputs/: def_strength_2025.csv  prediction.json  qb_prod_report_Drake_Maye.json  qb_prod_report_Sam_Darnold.json  score_model.json
scripts/: audit_model_outputs.py  audit_predictor_consistency.py  audit_probability_distribution.py  audit_score_distribution.py  build_schedule_pipeline.py  generate_team_logo_manifest.py  inspect_nflreadpy_columns.py  list_team_games.py  make_qb_compare.py  make_qb_prod_card.py  make_slide5.py  p1_repro.py  run.py  run_and_make_slide5.py  run_backend.py  run_data_acceptance.py  smoke_nflreadpy.py  sync_team_logos_to_frontend.py  test_nfl_data_load.py  train_and_evaluate_models.py  train_score_model.py
src/gridironiq/: __init__.py  api.py  backtest_engine.py  draft_simulator.jsx  matchup_engine.py  pipeline_cache.py  qb_production_engine.py  report_generator.py  schedule_engine.py
src/gridironiq/ai/: chat.py  draft_analyst.py  explainer.py  phi4_provider.py  prompts.py  provider.py  schemas.py  template_provider.py
src/gridironiq/assets/: __init__.py  team_logos.py
src/gridironiq/draft/: README.md  __init__.py  cfb_client.py  cfb_schools.py  cfb_stats.py  consensus.py  decision_engine.py  draft_board.py  loaders.py  pipeline.py  player_model.py  positions.py  report.py  room_production.py  scheme_fit.py  simulator.py  team_context.py  team_needs.py  trade_simulator.py
src/gridironiq/models/: __init__.py  first_round_model.py  fit_margin_model.py  (+7 more)
src/superbowlengine/: __init__.py  __main__.py  config.py
src/superbowlengine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_ai_chat_guardrails.py  test_ai_explainer.py  test_api_v2_payloads.py  test_cfb_aggregate.py  test_data.py  test_data_load_nflreadpy_contract.py  test_draft_engine.py  test_full_pipeline.py  test_heatmaps.py  test_keys.py  test_matchup_report.py  test_model.py  test_model_artifacts.py  test_professor_rule_consistency.py  test_qb_turnover_attribution.py  test_reports.py  test_score_model_realism.py  test_situational_reports.py  test_sos.py  test_team_context.py  test_team_needs_layers.py  test_ties.py  test_time.py  test_trained_model_integration.py  test_turnover_regression.py  test_weighted_aggregation.py
(+63 files in other folders)
