[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superbowlengine"
version = "0.1.0"
description = "Explainable NFL Super Bowl prediction engine using 5 Keys and professor-style rules"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "SuperBowlEngine" }]
dependencies = [
    "nflreadpy>=0.1.0",
    "pandas>=2.0.0",
    "streamlit>=1.28.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
superbowlengine = "superbowlengine.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (e.g. nflreadpy network integration); run with -m slow",
]