[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superbowlengine"
version = "0.1.0"
description = "Explainable NFL Super Bowl prediction engine using 5 Keys and professor-style rules"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SuperBowlEngine" }]
dependencies = [
    "python-dotenv>=1.0.0",
    "nflreadpy>=0.1.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "weasyprint>=60.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
# Heavy / GPU stacks — not needed for the FastAPI draft + matchup API on small hosts.
streamlit = ["streamlit>=1.28.0"]
phi4 = ["torch>=2.2.0", "transformers>=4.40.0"]
plots = ["matplotlib>=3.5.0"]
training = ["xgboost>=2.0.0", "matplotlib>=3.5.0"]
all = [
    "streamlit>=1.28.0",
    "matplotlib>=3.5.0",
    "xgboost>=2.0.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "matplotlib>=3.5.0",
    "xgboost>=2.0.0",
]

[project.scripts]
superbowlengine = "superbowlengine.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (e.g. nflreadpy network integration); run with -m slow",
]